--- a/index.html
+++ b/index.html
@@ -4,36 +4,37 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Глейси</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
 </head>
 
-<body>
-  <header>
+<body class="inner-page">
+  <header class="header">
     <a>
       <img src="img/svg-gllacy/logo.svg" width="154" height="64" alt="Логотип магазина Glacy">
     </a>
     <nav>
-      <ul>
-        <li><a href="catalog.html">Каталог</a></li>
-        <ul>
-          <li><a href="#">Новинки</a></li>
-          <li><a href="catalog.html">Сливочные</a></li>
-          <li><a href="#">Щербеты</a></li>
-          <li><a href="#">Фруктовый лед</a></li>
-          <li><a href="#">Мелорин</a></li>
+      <ul class="menu">
+        <li><a class="header-link catalog-link" href="catalog.html">Каталог</a></li>
+        <ul class="add-menu">
+          <li><a class="new" href="#">Новинки</a></li>
+          <li><a class="add-link" href="catalog.html">Сливочные</a></li>
+          <li><a class="add-link" href="#">Щербеты</a></li>
+          <li><a class="add-link" href="#">Фруктовый лед</a></li>
+          <li><a class="add-link" href="#">Мелорин</a></li>
         </ul>
-        <li><a href="payment.html">Доставка и оплата</a></li>
-        <li><a href="info.html">О Компании</a></li>
+        <li><a class="header-link" href="payment.html">Доставка и оплата</a></li>
+        <li><a class="header-link" href="info.html">О Компании</a></li>
       </ul>
     </nav>
     <ul>
-      <li><a href="#">Поиск</a></li>
+      <li><a class="header-icons search" href="#">Поиск</a></li>
       <form action="https://echo.htmlacademy.ru" method="get">
         <input type="search" name="searching" aria-label="searching block">
         <button type="submit">Найти</button>
       </form>
-      <li><a href="#">Вход</a></li>
+      <li><a class="header-icons enterance" href="#">Вход</a></li>
       <form action="https://echo.htmlacademy.ru/" method="post">
         <input type="email" name="email" placeholder="Электронная почта" required>
         <input type="password" name="password" placeholder="Пароль" required>
@@ -41,7 +42,7 @@
         <a href="#">Забыли пароль?</a>
         <a href="#">Новая регистрация</a>
       </form>
-      <li><a href="#">Пусто</a></li>
+      <li><a class="header-icons" href="#">Пусто</a></li>
     </ul>
   </header>
   <main>
@@ -144,7 +145,7 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section class="advantages">
       <p>
         Магазин Глэйси-это онлайн- и офлайн магазин по продаде мороженого собственного производства и на развес
       </p>
@@ -159,15 +160,15 @@
         <li>Доставка нашего мороженого до заказчиков осуществляется в специальном темопаке.который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
       </ul>
     </section>
-    <section>
+    <section class="blog">
       <h3>Новое о нашем блоге</h3>
       <p><a href="">10 способов сервировки фруктовых щербетов к столу</a></p>
     </section>
-    <article>
+    <article class="subscription">
       <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
       <form action="https://echo.htmlacademy.ru/" method="get">
         <input type="email" placeholder="email@example.com" name="searching">
-        <button type="submit">Отправить</button>
+        <button class="button" type="submit">Отправить</button>
       </form>
     </article>
     <article>
