--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,7 @@
         <table>
           <tr>
             <td>
-              <a href="#">X</a>
+              <a href="#">Удалить из корзины</a>
             </td>
             <td>
               <img src="img/ice-cream/orangejam.png" width="30" height="30" alt="мороженое">
@@ -46,7 +46,7 @@
           </tr>
           <tr>
             <td>
-              <a href="#">X</a>
+              <a href="#">Удалить из корзины</a>
             </td>
             <td>
               <img src="img/ice-cream/whitechoc.png" width="30" height="30" alt="мороженое">
