ЭТО ДОПОЛНИТЕЛЬНОЕ ЗАДАНИЕ

--- a/catalog.html
+++ b/catalog.html
@@ -322,7 +322,7 @@
         <li><a target="blank" href="vkontakte.ru">Вконтакте</a></li>
       </ul>
       <ul>
-        <li><a href="#">Для поставщиков</a></li>
+        <li><a class="delivers" href="#">Для поставщиков</a></li>
         <li><a href="#">О производстве</a></li>
         <li><a href="#">Наши документы</a></li>
         <li><a href="#">Экологические стандарты</a></li>
