--- a/index.html
+++ b/index.html
@@ -47,26 +47,26 @@
   </header>
   <main>
     <div>
-      <p>
+      <p class="working-time">
         С 10 до 20,еждневно
         <a href="tel:88124502525">8 812 450-25-25</a>
       </p>
-      <ul>
+      <ul class="slides">
         <li>
           <img src="img/ice-cream/slides/malinslide.png" width="1045" height="881" alt="Слайд 1">
           <p>Крем-брюле и пломбир
             с малиновым джемом</p>
-          <a href="#">Давайте оба!</a>
+          <a class="button" href="#">Давайте оба!</a>
         </li>
         <li>
           <img src="img/ice-cream/slides/chocslide.png" width="1045" height="881" alt="Слайд 2">
           <p>Шоколадный пломбир и лимонный сорбет</p>
-          <a href="#">Давайте оба!</a>
+          <a class="button" href="#">Давайте оба!</a>
         </li>
         <li>
           <img src="img/ice-cream/slides/pomadeslide.png" width="1045" height="881" alt="Слайд 3">
           <p>пломбир с помадкой и клубничный щербет</p>
-          <a href="#">Давайте оба!</a>
+          <a class="button" href="#">Давайте оба!</a>
         </li>
       </ul>
       <!-- <form action="#">
@@ -75,18 +75,18 @@
         <input type="radio" name="Slide" value="slide3">
       </form> -->
     </div>
-    <section>
+    <section class="raspberry">
       <h2>Малинка даром!</h2>
       <p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-      <a href="#">Хочу варенье!</a>
+      <a class="button" href="#">Хочу варенье!</a>
     </section>
-    <section>
+    <section class="gifted-chocolate">
       <h2>Шоколадки даром!</h2>
       <p>при покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-      <a href="#">Хочу шоколадки!</a>
+      <a class="button" href="#">Хочу шоколадки!</a>
     </section>
     <section>
-      <ul>
+      <ul class="ice-cream-list">
         <li>
           <a href="#">
             <img src="img/ice-cream/orangejam.png" width="267" height="267" alt="Мороженное">
@@ -171,19 +171,22 @@
         <button class="button" type="submit">Отправить</button>
       </form>
     </article>
-    <article>
+    <article class="adress-info">
       <img src="img/map/mapfooter.png" width="1200" height="430" alt="карта">
+      <div class="palce">
       <p>
         Адрес главного офиса и офлайн-магазина
         <b>Ул.Большая Конюшенная
           19/8,Санкт-Петербург</b>
       </p>
       <p>Для заказов по телефону:
-        <a href="tel:88124502525">8 812 450-25-25</a>
+        <a><span class="call-number">8 812 450-25-25</span></a>
         (с 10 до 20 ежедневно)</p>
       <form action="https://echo.htmlacademy.ru/" method="post">
-        <button type="submit">Форма обратной связи</button>
+        <button class="button" type="submit">Форма обратной связи</button>
+
       </form>
+    </div>
     </article>
     <section>
       <h2>Мы обязательно вам ответим!</h2>
@@ -205,7 +208,7 @@
         <li><a target="blank" href="vkontakte.ru">Вконтакте</a></li>
       </ul>
       <ul>
-        <li><a href="#">Для поставщиков</a></li>
+        <li><a class="delivers" href="#">Для поставщиков</a></li>
         <li><a href="#">О производстве</a></li>
         <li><a href="#">Наши документы</a></li>
         <li><a href="#">Экологические стандарты</a></li>
