--- a/index.html
+++ b/index.html
@@ -174,19 +174,18 @@
     <article class="adress-info">
       <img src="img/map/mapfooter.png" width="1200" height="430" alt="карта">
       <div class="palce">
-      <p>
-        Адрес главного офиса и офлайн-магазина
-        <b>Ул.Большая Конюшенная
-          19/8,Санкт-Петербург</b>
-      </p>
-      <p>Для заказов по телефону:
-        <a><span class="call-number">8 812 450-25-25</span></a>
-        (с 10 до 20 ежедневно)</p>
-      <form action="https://echo.htmlacademy.ru/" method="post">
-        <button class="button" type="submit">Форма обратной связи</button>
-
-      </form>
-    </div>
+        <p>
+          Адрес главного офиса и офлайн-магазина
+          <b>Ул.Большая Конюшенная
+            19/8,Санкт-Петербург</b>
+        </p>
+        <p>Для заказов по телефону:
+          <a class="call-number">8 812 450-25-25</a>
+          (с 10 до 20 ежедневно)</p>
+        <form action="https://echo.htmlacademy.ru/" method="post">
+          <button class="button" type="submit">Форма обратной связи</button>
+        </form>
+      </div>
     </article>
     <section>
       <h2>Мы обязательно вам ответим!</h2>
